--- a/Numpy _Task1.ipynb
+++ b/Numpy _Task1.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -46,14 +46,15 @@
        "array([2.  , 0.75, 2.  , 1.  , 0.5 ])"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#type your code here\n",
-    "np.array([2,0.75,2,1,0.5])"
+    "cupcakes = np.array([2,0.75,2,1,0.5])\n",
+    "cupcakes"
    ]
   },
   {
@@ -67,25 +68,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "Cannot load file containing pickled data when allow_pickle=False",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-7-f9e3ca4d6581>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m#type your code here\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mrecipes\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mload\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"recipes.csv\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32mC:\\ProgramData\\Anaconda3\\lib\\site-packages\\numpy\\lib\\npyio.py\u001b[0m in \u001b[0;36mload\u001b[1;34m(file, mmap_mode, allow_pickle, fix_imports, encoding)\u001b[0m\n\u001b[0;32m    455\u001b[0m             \u001b[1;31m# Try a pickle\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    456\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[0mallow_pickle\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 457\u001b[1;33m                 raise ValueError(\"Cannot load file containing pickled data \"\n\u001b[0m\u001b[0;32m    458\u001b[0m                                  \"when allow_pickle=False\")\n\u001b[0;32m    459\u001b[0m             \u001b[1;32mtry\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mValueError\u001b[0m: Cannot load file containing pickled data when allow_pickle=False"
-     ]
+     "data": {
+      "text/plain": [
+       "array([[2.   , 0.75 , 2.   , 1.   , 0.5  ],\n",
+       "       [1.   , 0.125, 1.   , 1.   , 0.125],\n",
+       "       [2.75 , 1.5  , 1.   , 0.   , 1.   ],\n",
+       "       [4.   , 0.5  , 2.   , 2.   , 0.5  ]])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "#type your code here\n",
-    "recipes = np.load(\"recipes.csv\")"
+    "recipes = np.genfromtxt('recipes.csv', delimiter=',')\n",
+    "recipes"
    ]
   },
   {
@@ -113,9 +116,28 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cupcakes [2.   0.75 2.   1.   0.5 ]\n",
+      "Pancake [1.    0.125 1.    1.    0.125]\n",
+      "Cookie [2.75 1.5  1.   0.   1.  ]\n",
+      "Bread [4.  0.5 2.  2.  0.5]\n"
+     ]
+    }
+   ],
    "source": [
-    "#type your code here\n"
+    "#type your code here\n",
+    "Cupcakes = recipes[0]\n",
+    "Pancake = recipes[1]\n",
+    "Cookie = recipes[2]\n",
+    "Bread = recipes[3]\n",
+    "print(\"Cupcakes\",Cupcakes)\n",
+    "print(\"Pancake\",Pancake)\n",
+    "print(\"Cookie\",Cookie)\n",
+    "print(\"Bread\",Bread)"
    ]
   },
   {
@@ -131,9 +153,22 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([2., 1., 1., 2.])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#type your code here\n"
+    "#type your code here\n",
+    "eggs = recipes[::,2]\n",
+    "eggs"
    ]
   },
   {
@@ -145,11 +180,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([False,  True,  True, False])"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#type your code here\n"
+    "#type your code here\n",
+    "recipes[::,2]==1"
    ]
   },
   {
@@ -163,11 +210,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([2.75, 1.5 , 1.  , 0.  , 1.  ])"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#type your code here\n"
+    "#type your code here\n",
+    "cookies = recipes[2]\n",
+    "cookies"
    ]
   },
   {
@@ -180,11 +240,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([4. , 1.5, 4. , 2. , 1. ])"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#type your code here\n"
+    "#type your code here\n",
+    "double_batch = cupcakes *2\n",
+    "double_batch"
    ]
   },
   {
@@ -197,11 +270,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([6.75, 3.  , 5.  , 2.  , 2.  ])"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#type your code here\n"
+    "#type your code here\n",
+    "grocery_list = cookies + double_batch\n",
+    "grocery_list"
    ]
   },
   {
